# geometric-brain-mcp

./: .gitignore  CHANGELOG.md  DEFERRED_WORK.md  MVP_LAUNCH_CHECKLIST.md  PACKAGE_DELIVERY.md  README.md  RELEASE_NOTES.md  api.py  bridge_validation.py  config.py  pyproject.toml  render.yaml  requirements-ci.txt  requirements.txt  server.py  spectral_engine.py  test_e2e.py
.github/workflows/: ci.yml
dist_v2/: geometric_brain_mcp-1.0.0-py3-none-any.whl
