[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geometric-brain-mcp"
version = "1.1.1"  # keep in sync with config.SCHEMA_VERSION
description = "Spectral rigidity analysis for transformer latent spaces"
requires-python = ">=3.11,<3.14"
license = "MIT"
readme = "README.md"
dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
bridge = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "scikit-learn>=1.3.0",
    "accelerate>=0.20.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]

[tool.setuptools]
py-modules = ["spectral_engine", "config", "api", "server"]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["bridge_validation.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = [
    "E501",   # line too long — handled by formatter
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["."]
